[gd_scene load_steps=5 format=3 uid="uid://xbhv7p0a8n62"]

[ext_resource type="Script" uid="uid://bkatiu30mb52n" path="res://entities/environment/lava.gd" id="1_xqo5k"]

[sub_resource type="BoxShape3D" id="BoxShape3D_sg2u3"]
size = Vector3(3.47, 2.69, 3.515)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xqo5k"]
albedo_color = Color(0.87058824, 0.24705882, 0.19607843, 0.5019608)
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 2.0

[sub_resource type="BoxMesh" id="BoxMesh_m6qrj"]
material = SubResource("StandardMaterial3D_xqo5k")
size = Vector3(3.47, 2.69, 3.515)

[node name="Lava" type="Node3D"]
script = ExtResource("1_xqo5k")
width = 3.11
height = 1.66
depth = 2.745

[node name="DamageArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageArea"]
unique_name_in_owner = true
shape = SubResource("BoxShape3D_sg2u3")

[node name="LavaMesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
mesh = SubResource("BoxMesh_m6qrj")

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_damage_area_body_exited"]
